5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4370/executions/1596_1016.log
== TEST (2019-03-26 20:05:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
lta = float(input("comprimento a: "))
ltb = float(input("comprimento b: "))
lta = float(input("comprimento c: "))
semiperimetro = (lta + ltb + ltc) / 2
from math import sqrt
area_triangulo = sqrt(semiperimetro*(semiperimetro-lta)*(semiperimetro-ltb)*(semiperimetro-ltc))
print(round(area_triangulo,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    semiperimetro = (lta + ltb + ltc) / 2
NameError: name 'ltc' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 20:06:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
lta = float(input("comprimento a: "))
ltb = float(input("comprimento b: "))
ltc = float(input("comprimento c: "))
semiperimetro = (lta + ltb + ltc) / 2
from math import sqrt
area_triangulo = sqrt(semiperimetro*(semiperimetro-lta)*(semiperimetro-ltb)*(semiperimetro-ltc))
print(round(area_triangulo,5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 20:06:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
lta = float(input("comprimento a: "))
ltb = float(input("comprimento b: "))
ltc = float(input("comprimento c: "))
semiperimetro = (lta + ltb + ltc) / 2
from math import sqrt
area_triangulo = sqrt(semiperimetro*(semiperimetro-lta)*(semiperimetro-ltb)*(semiperimetro-ltc))
print(round(area_triangulo,5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 20:06:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
lta = float(input("comprimento a: "))
ltb = float(input("comprimento b: "))
ltc = float(input("comprimento c: "))
semiperimetro = (lta + ltb + ltc) / 2
from math import sqrt
area_triangulo = sqrt(semiperimetro*(semiperimetro-lta)*(semiperimetro-ltb)*(semiperimetro-ltc))
print(round(area_triangulo,5))
-- EXECUTION TIME:
0.191995
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
